# CS100-Lab-4

./: .gitignore  CMakeLists.txt
src/: main.cpp  rectangle.cpp
tests/: test.cpp
